# my_algorithm_study

./: .gitignore  MPL.py  OOP.py  firstclass.py  function_function.py  import_function.py  linked.py  main.py  module_test.py  pyproject.toml  study.py  tests 2.py  tests.py
